# awsipranges

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  release-plz.toml
.github/: mergify.yml
.github/workflows/: release-crate.yml  release-dist.yml  release.yml  test.yml  tests.yml
demo/: Dockerfile  demo.tape
docs/: lib_configuration_table.md
examples/: lib_demo.rs
src/: blocking_client.rs  lib.rs  main.rs
src/blocking/: json.rs  mod.rs
src/cli/: args.rs  core.rs  csv.rs  log.rs  mod.rs  output.rs  utils.rs
src/cli/output/: mod.rs  prefix_table.rs  search_summary.rs
src/core/: aws_ip_prefix.rs  aws_ip_ranges.rs  awsipranges.rs  client.rs  config.rs  datetime.rs  errors.rs  errors_and_results.rs  filter.rs  json.rs  json_ip_ranges.rs  mod.rs  prefix_type.rs  search_results.rs  utils.rs
tests/: awsipranges.rs  examples.rs
wix/: main.wxs
