[package]
name = "awsipranges"
description = "Quickly query the AWS IP Ranges"
authors = ["Chris Lunsford <cm@lunsford.io>"]
license = "BSD-2-Clause-Patent"
homepage = "https://github.com/cmlccie/awsipranges"
repository = "https://github.com/cmlccie/awsipranges"
documentation = "https://docs.rs/awsipranges/latest/awsipranges/"
version = "0.8.0"
edition = "2021"

[package.metadata.wix]
upgrade-guid = "678FEBC6-FF95-4E28-98D3-E955792A85EE"
path-guid = "759EEE18-34F3-43EE-8C22-0F9711B9BCD0"
license = false
eula = false

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "3.0.4"
comfy-table = "7.2.1"
csv = "1.4.0"
dirs = "6.0.0"
ipnetwork = { version = "0.21.1", features = ["serde"] }
log = "0.4.29"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.148"
stderrlog = "0.6.0"

[dev-dependencies]
assert_cmd = "2.1.1"
escargot = "0.5.15"
test-log = "0.2.19"


# --------------------------------------------------------------------------------------
# Cargo Dist
# --------------------------------------------------------------------------------------

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "cmlccie/tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-latest"
x86_64-apple-darwin = "macos-13"
x86_64-pc-windows-msvc = "windows-latest"
x86_64-unknown-linux-gnu = "ubuntu-latest"
